# CBT_mood_tracker

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_fsm_state.py  0003_schedule_prefs.py  0004_user_language.py  0005_anomaly_checkins.py  0006_weekly_summaries.py
app/: config.py  di.py  logging_setup.py  main.py
app/ai/: prompts.py  summary_prompts.py  tools.py
app/bot/: deps.py  i18n.py  keyboards.py  states.py
app/domain/: enums.py  models.py  repositories.py
app/infrastructure/: ai_client.py  crypto.py  db.py  fsm_models.py  fsm_storage.py  schedule_models.py  summary_models.py
app/services/: activation_service.py  ai_service.py  analysis_service.py  anomaly_checkin_service.py  anomaly_detector.py  chart_service.py  entry_service.py  pdf_service.py  schedule_service.py  summary_service.py  therapist_export_service.py  time.py
docker/: Dockerfile  entrypoint.sh
tests/unit/: conftest.py  test_activation_service.py  test_activity_plan_enum.py  test_analysis_service.py  test_anomaly_checkin_service.py  test_anomaly_detector.py  test_auth_middleware.py  test_backfill_parsing.py  test_bot_factory.py  test_chart_service.py  test_config_db_url.py  test_crypto.py  test_entry_service.py  test_entry_service_update_extra.py  test_fsm_storage.py  test_help_text_use_cases.py  test_i18n.py  test_metric_semantics.py  test_pdf_service_therapist.py  test_period_parsing.py  test_relative_date.py  (+15 more)
(+25 files in other folders)
